Archive2/93/4da251a19e34bf/output
main.cpp: In function 'int main()':
main.cpp:3:10: error: redeclaration of 'int i'
     int(i);
          ^
main.cpp:2:9: error: 'int i' previously declared here
     int i = 5;
         ^
